@@ -1169,6 +1169,7 @@ PRTL_USER_PROCESS_PARAMETERS NTAPI RtlNormalizeProcessParams(RTL_USER_PROCESS_PA
 ULONG		NTAPI	RtlNtStatusToDosError(NTSTATUS);
 NTSTATUS	NTAPI	RtlQueryEnvironmentVariable_U(PWSTR,PUNICODE_STRING,PUNICODE_STRING);
 NTSTATUS	NTAPI	RtlSetEnvironmentVariable(PWSTR,PUNICODE_STRING,PUNICODE_STRING);
+NTSTATUS	NTAPI	RtlSystemTimeToLocalTime(const LARGE_INTEGER* SystemTime,PLARGE_INTEGER LocalTime);
 VOID		NTAPI	RtlTimeToTimeFields(PLARGE_INTEGER Time,PTIME_FIELDS TimeFields);
 NTSTATUS	NTAPI	RtlUnicodeStringToAnsiString(PANSI_STRING,PUNICODE_STRING,SIZE_T);
 
