@@ -74,6 +74,7 @@ EXPORTS
 	winx_time2str
 	winx_xtime
 	winx_get_system_time
+	winx_get_local_time
 	winx_list_insert_item
 	winx_list_remove_item
 	winx_list_destroy
